feat: CRUD básico de categorias
